Fixed missing whitespace

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -67,7 +67,7 @@ figure.wrap {
 
 figure.wrap-right {
 	float: right;
-	padding: .5em 1em 0 0;
+	padding: .5em 1em 0 1em;
 	border: solid silver 0px;
 }
 
